--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,14 @@
 	<div class="container mb-4">
 		<form action="" method="post" novalidate="novalidate">
 			<label for="latex" class="form-label">input LaTeX</label>
-			<input type="text" name="latex" id="latex" class="form-control" value="\lim_{x \to a} f(x) = L \quad \text{if} \quad \forall \varepsilon > 0,\ \exists \delta > 0 \ \text{such that} \ 0 < |x - a| < \delta \Rightarrow |f(x) - L| < \varepsilon">
+			<input type="text" name="latex" id="latex" class="form-control" value="\lim_{x \to a}f(x)=A \quad \text{if} \quad \forall\varepsilon>0, \exists\delta>0 \ \text{s.t.} \ 0<\left|x-a\right|<\delta \Rightarrow \left|f(x)-A\right|<\varepsilon">
 		</form>
 	</div>
 	<div class="container mb-4">
 		<label class="form-label">output LaTeX</label>
 		<div class="container" id="output">
 			\[
-			\lim_{x \to a} f(x) = L \quad \text{if} \quad \forall \varepsilon > 0,\ \exists \delta > 0 \ \text{such that} \ 0 < |x - a| < \delta \Rightarrow |f(x) - L| < \varepsilon
+			\lim_{x \to a}f(x)=A \quad \text{if} \quad \forall\varepsilon>0, \exists\delta>0 \ \text{s.t.} \ 0<\left|x-a\right|<\delta \Rightarrow \left|f(x)-A\right|<\varepsilon
 			\]
 		</div>
 	</div>
