--- a/templates/math/index.html
+++ b/templates/math/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "math/layout.html" %}
 {% block title %}Math{% endblock %}
 {% block content %}
 <div class="container mt-5">
