--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -4,7 +4,28 @@
 <div class="container mt-5">
 	<div class="card">
 		<div class="card-body">
-			{{ data["content"] | replace("\r\n", "<br>") | safe }}
+			<div>
+				<h2 class="card-title">title</h2>
+				<div class="row">
+					<div class="col">
+						<p>作成者：{{ data["user"] }}<br>
+						単元：{{ data["category"] }}・{{ data["unit"] }}</p>
+					</div>
+					<div class="col text-end">
+						{% if current_user.id==data["userid"] %}
+						<a href="{{ url_for('math.edit', id=data['id']) }}" class="btn btn-primary">編集</a>
+						{% endif %}
+					</div>
+				</div>
+			</div>
+			<div class="mx-5">
+				<h5>問題文</h5>
+				<div class="mx-5 card">
+					<div class="card-body">
+						{{ data["content"] | replace("\r\n", "<br>") | safe }}
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
