--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -5,7 +5,7 @@
 	<div class="card">
 		<div class="card-body">
 			<div>
-				<h2 class="card-title">title</h2>
+				<h2 class="card-title">{{ data["title"] }}</h2>
 				<div class="row">
 					<div class="col">
 						<p>作成者：{{ data["user"] }}<br>
