--- a/templates/math/layout.html
+++ b/templates/math/layout.html
@@ -8,6 +8,7 @@
 	<title>
 		{% block title %}{% endblock %}
 	</title>
+	<script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"><!-- style="background-color: #e3f2fd;"-->
@@ -45,7 +46,6 @@
 		</div>
 	</nav>
 	{% block content %}{% endblock %}
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
