--- a/templates/math/layout.html
+++ b/templates/math/layout.html
@@ -9,6 +9,8 @@
 		{% block title %}{% endblock %}
 	</title>
 	<script id="MathJax" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+	<!--<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">-->
+	<!--<script id="TikzJax" src="https://tikzjax.com/v1/tikzjax.js"></script>-->
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"><!-- style="background-color: #e3f2fd;"-->
