--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="mx-5">
+			<div class="mx-5 mb-3">
 				<h5>問題文</h5>
 				<div class="mx-5 card">
 					<div class="card-body">
