--- a/templates/math/problems/edit.html
+++ b/templates/math/problems/edit.html
@@ -1,5 +1,5 @@
 {% extends "math/layout.html" %}
-{% block title %}post{% endblock %}
+{% block title %}edit{% endblock %}
 {% block content %}
 <div class="container my-5">
 	<div class="card shadow">
