--- a/templates/math/problems/index.html
+++ b/templates/math/problems/index.html
@@ -40,11 +40,34 @@
 		</div>
 	</div>
 	<div class="container my-3">
+		<h4>ランダム問題</h4>
+		<a href="{{ url_for('math.problem', id=data['random'].id) }}" class="list-group-item list-group-item-action">
+			<div class="row">
+				<div class="col">{{ data['random'].title }}</div>
+				<div class="col">{{ data['random'].category }}・{{ data['random'].unit }}</div>
+			</div>
+		</a>
+	</div>
+	<!--
+	<div class="container my-3">
 		<h4>AIのおすすめ(案)</h4>
 	</div>
-	<div class="container my-3">
-		<h4>新規</h4>
-	</div>
+	-->
+	{% if data["new"]!=[] %}
+		<div class="container my-3">
+			<h4>新規</h4>
+			{% for i in data["new"] %}
+				<div class="list-group">
+					<a href="{{ url_for('math.problem', id=i.id) }}" class="list-group-item list-group-item-action">
+						<div class="row">
+							<div class="col">{{ i.title }}</div>
+							<div class="col">{{ i.category }}・{{ i.unit }}</div>
+						</div>
+					</a>
+				</div>
+			{% endfor %}
+		</div>
+	{% endif %}
 	<div class="container my-3">
 		<h4>自分の問題</h4>
 		<div class="list-group">
@@ -57,6 +80,9 @@
 				</a>
 			{% endfor %}
 		</div>
+	</div>
+	<div class="container my-5">
+		<a href="{{ url_for('math.problemsAll') }}" class="btn btn-primary d-grid">問題をすべて見る</a>
 	</div>
 </div>
 {% endblock %}
