--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -1,5 +1,5 @@
 {% extends "math/layout.html" %}
-{% block title %}Math Problems{% endblock %}
+{% block title %}{{ data["title"] }}{% endblock %}
 {% block content %}
 <div class="container mt-5">
 	<div class="card">
