--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -64,7 +64,7 @@
 					<div class="card-body">
 						<form method="post">
 							<div class="mb-3">
-								<label for="answer" class="form-label">答案(記述は任意です。採点者に分かる形で答案を作成してください。)</label>
+								<label for="answer" class="form-label">答案(記述は任意ですが、部分点がもらえる可能性があります。採点者に分かる形で答案を作成してください。)</label>
 								<textarea name="answer" id="answer" class="form-control" rows="6" required placeholder="(答)\(\boxed{\dfrac{1}{2}x^2+x+2}\)"></textarea>
 							</div>
 							<div class="mb-3">
