--- a/templates/math/layout.html
+++ b/templates/math/layout.html
@@ -14,40 +14,42 @@
 	<!--<script id="TikzJax" src="https://tikzjax.com/v1/tikzjax.js"></script>-->
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark"><!-- style="background-color: #e3f2fd;"-->
-		<div class="container-fluid">
-			<a class="navbar-brand" href="/">Home</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-				<div class="navbar-nav me-auto">
-					<a href="{{ url_for('math.problems').replace('index.cgi/', '') }}" class="nav-link">Problems</a>
-					<a href="{{ url_for('math.latex').replace('index.cgi/', '') }}" class="nav-link">LaTeX</a>
-				</div>
-				<div class="navbar-nav">
-					<div class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							{% if current_user.is_authenticated %}
-								{{ current_user.email.split('@')[0] }}
-							{% else %}
-								Account
-							{% endif %}
-						</a>
-						<ul class="dropdown-menu dropdown-menu-dark">
-							{% if current_user.is_authenticated %}
-								<li><a href="{{ url_for('account.account').replace('index.cgi/', '') }}" class="dropdown-item">Account Settings</a></li>
-								<li><a href="{{ url_for('account.logout').replace('index.cgi/', '') }}" class="dropdown-item">Logout</a></li>
-							{% else %}
-								<li><a href="{{ url_for('account.login').replace('index.cgi/', '') }}" class="dropdown-item">Login</a></li>
-								<li><a href="{{ url_for('account.register').replace('index.cgi/', '') }}" class="dropdown-item">Sign Up</a></li>
-							{% endif %}
-						</ul>
+	<div class="pb-5">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark"><!-- style="background-color: #e3f2fd;"-->
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/">Home</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav me-auto">
+						<a href="{{ url_for('math.problems').replace('index.cgi/', '') }}" class="nav-link">Problems</a>
+						<a href="{{ url_for('math.latex').replace('index.cgi/', '') }}" class="nav-link">LaTeX</a>
+					</div>
+					<div class="navbar-nav">
+						<div class="nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								{% if current_user.is_authenticated %}
+									{{ current_user.email.split('@')[0] }}
+								{% else %}
+									Account
+								{% endif %}
+							</a>
+							<ul class="dropdown-menu dropdown-menu-dark">
+								{% if current_user.is_authenticated %}
+									<li><a href="{{ url_for('account.account').replace('index.cgi/', '') }}" class="dropdown-item">Account Settings</a></li>
+									<li><a href="{{ url_for('account.logout').replace('index.cgi/', '') }}" class="dropdown-item">Logout</a></li>
+								{% else %}
+									<li><a href="{{ url_for('account.login').replace('index.cgi/', '') }}" class="dropdown-item">Login</a></li>
+									<li><a href="{{ url_for('account.register').replace('index.cgi/', '') }}" class="dropdown-item">Sign Up</a></li>
+								{% endif %}
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
+	</div>
 	{% block content %}{% endblock %}
 </body>
 </html>
