--- a/templates/math/problems/post.html
+++ b/templates/math/problems/post.html
@@ -40,8 +40,8 @@
 				</div><!--TITLE-->
 				<div class="mb-3">
 					<label for="preview" class="form-label">問題文プレビュー</label>
-					<div class="mx-5">
-						<div id="preview" class="border rounded bg-white p-3 mx-5" style="min-height: 120px;"></div>
+					<div style="max-width: 1180px;margin: 0 auto;">
+						<div id="preview" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1000px;margin: 0 auto;"></div>
 					</div>
 				</div><!--PREVIEW-->
 				<div class="mb-3">
@@ -54,8 +54,8 @@
 				</div><!--CONTENT-->
 				<div class="mb-3">
 					<label for="preview2" class="form-label">解答解説プレビュー</label>
-					<div class="mx-5">
-						<div id="preview2" class="border rounded bg-white p-3 mx-5" style="min-height: 120px;"></div>
+					<div style="max-width: 1180px;margin: 0 auto;">
+						<div id="preview2" class="border rounded bg-white p-3" style="min-height: 120px;max-width: 1180px;margin: 0 auto;"></div>
 					</div>
 				</div><!--PREVIEW2-->
 				<div class="mb-3">
