--- a/templates/math/problems/problem.html
+++ b/templates/math/problems/problem.html
@@ -16,17 +16,17 @@
 					{% endif %}
 				</div>
 			</div>
-			<div class="mx-5 mb-3">
+			<div class="mb-3" style="max-width: 1180px;margin: 0 auto;">
 				<h5>問題文</h5>
-				<div class="mx-5 card">
+				<div class="card" style="max-width: 1000px;margin: 0 auto;">
 					<div class="card-body">
 						{{ data["content"] | replace("\r\n", "<br>") | safe }}
 					</div>
 				</div>
 			</div>
-			<div class="mx-5 mb-3">
+			<div class="mb-3" style="max-width: 1180px;margin: 0 auto;">
 				<h5>配点</h5>
-				<div class="mx-5 card">
+				<div class="card" style="max-width: 1000px;margin: 0 auto;">
 					<div class="card-body">
 						<ol>
 							{% for i in data["score"][0] %}
@@ -40,8 +40,8 @@
 				</div>
 			</div>
 			{% if current_user.id==data["userid"] %}
-			<div class="accordion mx-5 mb-3" id="explanation-accordion">
-				<div class="accordion-item mx-5">
+			<div class="accordion mb-3" id="explanation-accordion" style="max-width: 1180px;margin: 0 auto;">
+				<div class="accordion-item" style="max-width: 1000px;margin: 0 auto;">
 					<h2 class="accordion-header">
 						<button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#explanation-accordion-body" aria-expanded="false" aria-controls="explanation-accordion-body">
 							解答解説
@@ -55,11 +55,11 @@
 				</div>
 			</div>
 			{% endif %}
-			<div class="mx-5 mb-3">
+			<div class="mb-3" style="max-width: 1180px;margin: 0 auto;">
 				{% if current_user.is_authenticated %}
 					{% if current_user.id==data["userid"] %}
 						<h5>採点する</h5>
-						<div class="accordion mx-5 mb-3" id="judgement-accordion">
+						<div class="accordion mb-3" id="judgement-accordion" style="max-width: 1000px;margin: 0 auto;">
 							{% for i in submissions %}
 								<div class="accordion-item">
 									<h2 class="accordion-header">
@@ -103,7 +103,7 @@
 					{% else %}
 						{% if submissions["unjudged"]==[] %}
 							<h5>回答する</h5>
-							<div class="mx-5 card">
+							<div class="card" style="max-width: 1000px;margin: 0 auto;">
 								<div class="card-body">
 									<form method="post">
 										<div class="mb-3">
@@ -112,9 +112,7 @@
 										</div>
 										<div class="mb-3">
 											<label for="preview" class="form-label">問題文プレビュー</label>
-											<div class="mx-5">
-												<div id="preview" class="border rounded bg-white p-3 mx-5" style="min-height: 120px;"></div>
-											</div>
+											<div id="preview" class="border rounded bg-white p-3" style="min-height: 120px;"></div>
 										</div>
 										<div class="d-grid">
 											<button type="submit" class="btn btn-primary mb-3">提出</button>
